@@ -17,6 +17,7 @@ package org.apache.solr.cloud;
  * limitations under the License.
  */
 
+import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.params.SolrParams;
 
 public class CloudDescriptor {
@@ -28,7 +29,7 @@ public class CloudDescriptor {
   private String nodeName = null;
 
   volatile boolean isLeader = false;
-  volatile String lastPublished;
+  volatile String lastPublished = ZkStateReader.ACTIVE;
   
   public String getLastPublished() {
     return lastPublished;
